--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-    --background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/image/image-background.png');
-    /* --background-image: url('/image/image-background.jpg'); */
+    
+    --background-image: url('/image/image-background.png');
     --background-position: center;
     --background-size: cover;
     --background-repeat: no-repeat;
@@ -61,7 +61,8 @@ html {
 }
 
 body {
-    background-image: var(--background-image);
+    background-color: var(--color-btn);
+    /* background-image: var(--background-image); */
     background-position: var(--background-position);
     background-size: var(--background-size);
     background-repeat: var(--background-repeat);
