--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-    
-    --background-image: url('/image/image-background.png');
+
+    --background-image: url('/image-background.png');
     --background-position: center;
     --background-size: cover;
     --background-repeat: no-repeat;
     --background-attachment: fixed;
-    /* --opacity: 0.9; */
+    /* --opacity: ; */
     --backdrop-filter: blur(5px);
 
     --font-family-title: 'Poppins', sans-serif;
@@ -21,15 +21,15 @@
     --text-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     --text-shadow-hover: 0 0 10px rgba(0, 0, 0, 0.2);
 
-    --box-shadow: 0 4px 10px rgba(255, 255, 255, 0.505);
-    --box-shadow-hover: 0 8px 10px rgba(255, 255, 255, 0.5);
+    --box-shadow: 0 4px 10px rgba(0, 0, 0, 0.611);
+    --box-shadow-hover: 0 8px 10px rgba(60, 60, 60, 0.5);
 
     --background-color: #ffffff;
     --bacground-color-card-header: #416EEF;
 
     --background-color-button: #ffffff;
     --background-color-button-hover: #f0f0f0;
-    --box-shadow-button: 0 4px 6px rgba(0, 0, 0, 0.5);
+    --box-shadow-button: 0 4px 6px rgba(255, 255, 255, 0.188);
     --box-shadow-button-hover: 0 4px 6px rgba(255, 255, 255, 0.21);
     --border-radious-button: 50px;
 
@@ -61,13 +61,11 @@ html {
 }
 
 body {
-    background-image: url('/image/image-background.png');
+    background-image: var(--background-image);
     background-position: var(--background-position);
     background-size: var(--background-size);
     background-repeat: var(--background-repeat);
-    background-attachment: var(--background-attachment);
     /* opacity: var(--opacity); */
-    /* backdrop-filter: var(--backdrop-filter); */
 }
 
 a {
@@ -94,7 +92,6 @@ span {
     flex-direction: column;
     width: var(--card-widht);
     height: var(--card-height);
-    /* background-color: var(--background-color); */
     color: var(--color);
     border-radius: 10px;
     box-shadow: var(--box-shadow);
@@ -120,7 +117,7 @@ span {
     font-size: var(--font-size-p);
     text-shadow: var(--text-shadow);
     font-weight: var(--font-weight-p);
-    color: var(--color);
+    color: var(--color-body);
     margin-top: 10px;
     text-align: justify;
 }
@@ -130,7 +127,7 @@ span {
     font-size: var(--font-size-h1);
     font-weight: var(--font-weight-h1);
     text-shadow: var(--text-shadow);
-    color: var(--color);
+    color: var(--color-body);
     margin-bottom: 10px;
 }
 
@@ -138,7 +135,7 @@ span {
     font-size: var(--font-size-p);
     font-weight: var(--font-weight-p);
     text-shadow: var(--text-shadow);
-    color: var(--color);
+    color: var(--color-body);
     margin-bottom: 10px;
     text-align: justify;
 }
@@ -237,7 +234,7 @@ span {
   }
   
   /* Celulares médios e pequenos tablets (tipo Galaxy Fold ou iPhone Mini) */
-  @media (max-width: 600px) {
+  @media (max-width: 640px) {
     
     .container {
         flex-direction: column;
