--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 
 :root {
 
-    --background-image: url('image-background.png');
+    --background-image: url('image/image-background.png');
     --background-position: center;
     --background-size: cover;
     --background-repeat: no-repeat;
